更新 多窗口程序设计思路.md

--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -6,4 +6,8 @@
 
 确定好主次关系，建立主窗口和子窗口的连接主要在主窗口的头文件和源文件上操作。实际设计中，窗口可能会有多级关系，所以以最简单的二级关系，即一个主窗口和一个子窗口为例，多级窗口关系无非就是简单的二级关系的多层嵌套或组合。
 
-把主窗口设为 `MainWindow` ，次窗口设为 `SubWindow` 。他们所属的文件如下表所示：
+把主窗口设为 `MainWindow` ，次窗口设为 `SubWindow` 。他们所属的文件如下所示：
+
+`MainWindow` ：`MainWindow.cpp`，`MainWindow.h`，`ui_MainWindow.h`
+
+`SubWindow` ：`SubWindow.cpp`，`SubWindow.h`，`ui_SubWindow.h`
