更新 多窗口程序设计思路.md

--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -8,6 +8,8 @@
 
 把主窗口设为 `MainWindow` ，次窗口设为 `SubWindow` 。他们所属的文件如下所示：
 
-`MainWindow` ：`MainWindow.cpp`，`MainWindow.h`，`ui_MainWindow.h`
+`MainWindow` ：`MainWindow.cpp`，`MainWindow.h`，`ui_MainWindow.h`。
 
-`SubWindow` ：`SubWindow.cpp`，`SubWindow.h`，`ui_SubWindow.h`
+`SubWindow` ：`SubWindow.cpp`，`SubWindow.h`，`ui_SubWindow.h`。
+
+建立两个窗口间的连接主要是对 `MainWindow.cpp` 和 `MainWindow.h` 操作。
