--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -1,8 +1,8 @@
-# 窗口的创建
+## 窗口的创建
 
 首先使用 `Qt Designer` 创建好所有的窗口及其组件，然后确定窗口间的主次关系。
 
-# 建立窗口间的连接
+## 建立窗口间的连接
 
 确定好主次关系，建立主窗口和子窗口的连接主要在主窗口的头文件和源文件上操作。实际设计中，窗口可能会有多级关系，所以以最简单的二级关系，即一个主窗口和一个子窗口为例，多级窗口关系无非就是简单的二级关系的多层嵌套或组合。
 
@@ -12,4 +12,14 @@
 
 `SubWindow` ：`SubWindow.cpp`，`SubWindow.h`，`ui_SubWindow.h`。
 
-建立两个窗口间的连接主要是对 `MainWindow.cpp` 和 `MainWindow.h` 操作。
+建立两个窗口间的连接主要是对 `MainWindow.cpp` 和 `MainWindow.h` 操作。主要分为以下几个步骤：1、将子窗口类组合进主窗口类，也就是说，主窗口类的成员变量除了其自身的窗口Ui类之外，还有子窗口类。2、利用信号与槽的机制建立主窗口和子窗口
+
+### 子窗口类组合进主窗口类
+
+在 `MainWindow.h` 头文件中给出类主窗口类的定义，其私有成员变量只有其自身的窗口Ui类，现将子窗口类组合进去：包含子窗口类的头文件 `SubWindow.h` ，然后在私有成员变量中加入SubWindow类的对象。代码如下：
+
+```
+
+
+
+```cpp
