--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -20,6 +20,32 @@
 
 ```cpp
 
+#ifndef MAINWINDOW_H
+#define MAINWINDOW_H
 
+#include <QWidget>
+#include "SubWindow.h"
+
+QT_BEGIN_NAMESPACE
+namespace Ui { class MainWindow; }
+QT_END_NAMESPACE
+
+class MainWindow : public QWidget {
+Q_OBJECT
+
+public:
+    explicit MainWindow(QWidget *parent = nullptr);
+    ~MainWindow() override;
+
+private slots:
+    void showSubWindow(); //自定义槽函数，按下按钮展示子窗口。
+
+private:
+    Ui::MainWindow *ui;
+    SubWindow *sub_window; //主窗口除了其窗口Ui类外，还有子窗口类。
+};
+
+
+#endif //MAINWINDOW_H
 
 ```
