--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -16,7 +16,37 @@
 
 ### 子窗口类组合进主窗口类
 
-在 `MainWindow.h` 头文件中给出类主窗口类的定义，其私有成员变量只有其自身的窗口Ui类，现将子窗口类组合进去：包含子窗口类的头文件 `SubWindow.h` ，然后在私有成员变量中加入SubWindow类的对象。代码如下：
+在 `MainWindow.h` 头文件中给出类主窗口类的定义，其私有成员变量只有其自身的窗口Ui类。如下所示：
+
+```cpp
+
+#ifndef MAINWINDOW_H
+#define MAINWINDOW_H
+
+#include <QWidget>
+#include "SubWindow.h"
+
+QT_BEGIN_NAMESPACE
+namespace Ui { class MainWindow; }
+QT_END_NAMESPACE
+
+class MainWindow : public QWidget {
+Q_OBJECT
+
+public:
+    explicit MainWindow(QWidget *parent = nullptr);
+    ~MainWindow() override;
+
+private:
+    Ui::MainWindow *ui;
+};
+
+
+#endif //MAINWINDOW_H
+
+```
+
+现将子窗口类组合进去：包含子窗口类的头文件 `SubWindow.h` ，然后在私有成员变量中加入SubWindow类的对象。代码如下：
 
 ```cpp
 
