更新 多窗口程序设计思路.md

--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -12,7 +12,7 @@
 
 `SubWindow` ：`SubWindow.cpp`，`SubWindow.h`，`ui_SubWindow.h`。
 
-建立两个窗口间的连接主要是对 `MainWindow.cpp` 和 `MainWindow.h` 操作。主要分为以下几个步骤：1、将子窗口类组合进主窗口类，也就是说，主窗口类的成员变量除了其自身的窗口Ui类之外，还有子窗口类。2、利用信号与槽的机制建立主窗口和子窗口
+建立两个窗口间的连接主要是对 `MainWindow.cpp` 和 `MainWindow.h` 操作。主要分为以下几个步骤：1、将子窗口类组合进主窗口类，也就是说，主窗口类的成员变量除了其自身的窗口Ui类之外，还有子窗口类。2、利用信号与槽的机制建立主窗口和子窗口之间的连接。
 
 ### 子窗口类组合进主窗口类
 
@@ -74,5 +74,41 @@ private:
 
 
 #endif //MAINWINDOW_H
+
+```
+
+### 信号与槽
+
+主窗口经过某个事件发出一个信号，此信号会触发一个显示子窗口的槽函数 `showSubWindow()` 。由于信号的接收者还是主窗口自身，所以在 `MainWindow.h` 中定义这个槽函数。如下所示：
+
+```cpp
+#ifndef MAINWINDOW_H
+#define MAINWINDOW_H
+
+#include <QWidget>
+#include "SubWindow.h"
+
+QT_BEGIN_NAMESPACE
+namespace Ui { class MainWindow; }
+QT_END_NAMESPACE
+
+class MainWindow : public QWidget {
+Q_OBJECT
+
+public:
+    explicit MainWindow(QWidget *parent = nullptr);
+    ~MainWindow() override;
+
+private slots:
+    void showSubWindow(); //自定义槽函数，按下按钮展示子窗口。
+
+private:
+    Ui::MainWindow *ui;
+    SubWindow *sub_window; //主窗口除了主窗口的Ui外，还有子窗口。
+};
+
+
+#endif //MAINWINDOW_H
+
 
 ```
