更新 多窗口程序设计思路.md

--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -77,7 +77,7 @@ private:
 
 ```
 
-### 信号与槽
+### 编辑信号与槽
 
 主窗口经过某个事件发出一个信号，此信号会触发一个显示子窗口的槽函数 `showSubWindow()` 。由于信号的接收者还是主窗口自身，所以在 `MainWindow.h` 中定义这个槽函数。如下所示：
 
@@ -112,3 +112,7 @@ private:
 
 
 ```
+
+至此， `MainWindow.h` 的定义补充已经完成。需要在 `MainWindow.cpp` 中完成具体实现。
+
+## `MainWindow.cpp` 的具体实现
