更新 多窗口程序设计思路.md

--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -116,3 +116,33 @@ private:
 至此， `MainWindow.h` 的定义补充已经完成。需要在 `MainWindow.cpp` 中完成具体实现。
 
 ## `MainWindow.cpp` 的具体实现
+
+在没有建立主窗口和子窗口的连接之前，`MainWindow.cpp` 的代码如下：
+
+```cpp
+
+#include "MainWindow.h"
+#include "ui_MainWindow.h"
+#include "SubWindow.h"
+
+
+MainWindow::MainWindow(QWidget *parent) :
+    QWidget(parent), ui(new Ui::MainWindow) {
+    ui->setupUi(this);
+
+MainWindow::~MainWindow() {
+    delete ui;
+}
+
+```
+
+由于将 `SubWindow` 类组合进了 `MainWindow` 类，所以其构造函数的初始化列表需要将组合进来的 `SubWindow` 类对象也一并初始化了。代码如下：
+
+```cpp
+
+MainWindow::MainWindow(QWidget *parent) :
+    QWidget(parent), ui(new Ui::MainWindow), sub_window(nullptr){
+    ui->setupUi(this);
+
+```
+
