更新 多窗口程序设计思路.md

--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -79,7 +79,7 @@ private:
 
 ### 编辑信号与槽
 
-主窗口经过某个事件发出一个信号，此信号会触发一个显示子窗口的槽函数 `showSubWindow()` 。由于信号的接收者还是主窗口自身，所以在 `MainWindow.h` 中定义这个槽函数。如下所示：
+主窗口经过某个事件发出一个信号，此信号会触发一个显示子窗口的槽函数 `showSubWindow()` 。主窗口作为应用的控制中心，负责统一管理和调度子窗口的创建与显示，所以在 `MainWindow`类 中定义这个槽函数。如下所示：
 
 ```cpp
 #ifndef MAINWINDOW_H
@@ -136,13 +136,24 @@ MainWindow::~MainWindow() {
 
 ```
 
-由于将 `SubWindow` 类组合进了 `MainWindow` 类，所以其构造函数的初始化列表需要将组合进来的 `SubWindow` 类对象也一并初始化了。代码如下：
+由于将 `SubWindow` 类组合进了 `MainWindow` 类，所以其构造函数的初始化列表需要将组合进来的 `SubWindow` 类对象也一并初始化了，同时析构函数也要同时把新组合来的 `SubWindow` 类对象一并删除。代码如下：
 
 ```cpp
 
 MainWindow::MainWindow(QWidget *parent) :
     QWidget(parent), ui(new Ui::MainWindow), sub_window(nullptr){
     ui->setupUi(this);
+}
+//
+
+MainWindow::~MainWindow() {
+    delete ui;
+    delete sub_window;
+}
 
 ```
+
+在初始化列表中写 `sub_window(nullptr)` 是为了不设置父窗口，使得子窗口成为独立窗口，而不是嵌套在主窗口内部。这样做可以确保子窗口在显示时不依赖于主窗口的布局，并能够作为一个独立的窗口弹出。
+
+
 
