--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -155,5 +155,50 @@ MainWindow::~MainWindow() {
 
 在初始化列表中写 `sub_window(nullptr)` 是为了不设置父窗口，使得子窗口成为独立窗口，而不是嵌套在主窗口内部。这样做可以确保子窗口在显示时不依赖于主窗口的布局，并能够作为一个独立的窗口弹出。
 
+最后就是实现能够显示子窗口的槽函数代码如下：
+
+```cpp
+
+void MainWindow::showSubWindow() {
+    if (!sub_window) { //如果子窗口未创建，则创建一个子窗口
+        sub_window = new SubWindow(); //不把子窗口嵌入在主窗口中，而是新开辟一个窗口。
+    }
+    sub_window->show(); //显示子窗口
+    sub_window->raise(); //子窗口保持在最前面
+    sub_window->activateWindow(); //将子窗口激活并使其成为当前活动窗口
+}
+
+```
+最终，补充后的 `MainWindow.cpp` 完整如下所示：
+
+```cpp
+
+#include "MainWindow.h"
+#include "ui_MainWindow.h"
+#include "SubWindow.h"
+
+
+MainWindow::MainWindow(QWidget *parent) :
+    QWidget(parent), ui(new Ui::MainWindow), sub_window(nullptr){
+    ui->setupUi(this);
+    connect(ui->ShowSubWindowButton, SIGNAL(clicked()), this, SLOT(showSubWindow()));
+}
+
+MainWindow::~MainWindow() {
+    delete ui;
+    delete sub_window;
+}
+
+//显示子窗口的槽函数的实现
+void MainWindow::showSubWindow() {
+    if (!sub_window) { //如果子窗口未创建，则创建一个子窗口
+        sub_window = new SubWindow(); //不把子窗口嵌入在主窗口中，而是新开辟一个窗口。
+    }
+    sub_window->show(); //显示子窗口
+    sub_window->raise(); //子窗口保持在最前面
+    sub_window->activateWindow(); //将子窗口激活并使其成为当前活动窗口
+}
+
+```
 
 
