更新 多窗口程序设计思路.md

--- a/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -123,8 +123,6 @@ private:
 
 #include "MainWindow.h"
 #include "ui_MainWindow.h"
-#include "SubWindow.h"
-
 
 MainWindow::MainWindow(QWidget *parent) :
     QWidget(parent), ui(new Ui::MainWindow) {
@@ -139,6 +137,10 @@ MainWindow::~MainWindow() {
 由于将 `SubWindow` 类组合进了 `MainWindow` 类，所以其构造函数的初始化列表需要将组合进来的 `SubWindow` 类对象也一并初始化了，同时析构函数也要同时把新组合来的 `SubWindow` 类对象一并删除。代码如下：
 
 ```cpp
+
+#include "MainWindow.h"
+#include "ui_MainWindow.h"
+#include "SubWindow.h" //包含 SubWindow 类的头文件
 
 MainWindow::MainWindow(QWidget *parent) :
     QWidget(parent), ui(new Ui::MainWindow), sub_window(nullptr){
