--- a/Qt6学习代码/布局管理/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/布局管理/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -157,6 +157,18 @@ MainWindow::~MainWindow() {
 
 在初始化列表中写 `sub_window(nullptr)` 是为了不设置父窗口，使得子窗口成为独立窗口，而不是嵌套在主窗口内部。这样做可以确保子窗口在显示时不依赖于主窗口的布局，并能够作为一个独立的窗口弹出。
 
+然后将信号与槽函数进行连接，使用 `connect()` 方法，这里以鼠标的点击信号 `clicked()` 为例，点击按钮后，展示子窗口，代码如下：
+
+```cpp
+
+MainWindow::MainWindow(QWidget *parent) :
+    QWidget(parent), ui(new Ui::MainWindow), sub_window(nullptr){
+    ui->setupUi(this);
+    connect(ui->ShowSubWindowButton, SIGNAL(clicked()), this, SLOT(showSubWindow())); //将信号与槽函数连接
+}
+
+```
+
 最后就是实现能够显示子窗口的槽函数代码如下：
 
 ```cpp
