--- a/Qt6学习代码/布局管理/FirstMultipleWindowsProgram/多窗口程序设计思路.md
+++ b/Qt6学习代码/布局管理/FirstMultipleWindowsProgram/多窗口程序设计思路.md
@@ -215,4 +215,33 @@ void MainWindow::showSubWindow() {
 
 ```
 
+### `MainWindow.cpp` 的另一种写法
 
+上述写法在 `MainWindow` 的构造函数中先将子窗口初始化为空指针(因为不一定会用到子窗口)，当然也可以直接在构造时就直接初始化子窗口，那么这样的 `MainWindow.cpp` 的实现如下所示：
+
+```cpp
+
+#include "MainWindow.h"
+#include "ui_MainWindow.h"
+#include "SubWindow.h"
+
+MainWindow::MainWindow(QWidget *parent) :
+    QWidget(parent), ui(new Ui::MainWindow), sub_window(new SubWindow){ //直接初始化子窗口
+    ui->setupUi(this);
+    connect(ui->ShowSubWindowButton, SIGNAL(clicked()), this, SLOT(showSubWindow()));
+}
+
+MainWindow::~MainWindow() {
+    delete ui;
+    delete sub_window;
+}
+
+//显示子窗口的槽函数的实现
+void MainWindow::showSubWindow() {
+    //不再需要判断子窗口是否创建
+    sub_window->show(); //显示子窗口
+    sub_window->raise(); //子窗口保持在最前面
+    sub_window->activateWindow(); //将子窗口激活并使其成为当前活动窗口
+}
+
+```
